gcc/testsuite/rust/rustc/ui/issues/issue-39616.rs
fn foo(a: [0; 1]) {} // { dg-error "" "" { target *-*-* } }

fn main() {}

